--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <header>
       <div class="top-sections">
         <a href="">Ana Sayfa</a>
-
         <a href="">Bankamız</a>
         <a href="">İletişim</a>
       </div>
@@ -39,7 +38,7 @@
             />
           </div>
 
-          <button class="login__btn">&rarr;</button>
+          <button type="submit" id="login-btn">Giriş</button>
         </div>
       </div>
     </header>
