--- a/index.html
+++ b/index.html
@@ -24,27 +24,73 @@
         </div>
 
         <div class="login-section">
-          <div class="input-section">
+          <form class="input-section">
             <input
               type="text"
               placeholder="Kullanıcı"
               class="login__input login_input--user"
             />
             <input
-              type="text"
+              type="password"
               placeholder="Şifre"
               maxlength="4"
-              class="login__input login__input--pin"
+              class="login__input login_input--pin"
             />
-          </div>
-
-          <button type="submit" id="login-btn">Giriş</button>
+          </form>
+          <button id="login-btn">Giriş</button>
         </div>
       </div>
     </header>
 
     <main>
-      <div class="container">
+      <div class="accounts-info">
+        <table>
+          <thead>
+            <tr>
+              <th colspan="3">Hesaplar</th>
+            </tr>
+            <tr>
+              <th>Hesap Sahibi</th>
+              <th>Kullanıcı İsmi</th>
+              <th>Şifre</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Bakiye Sema Sarıçam</td>
+              <td>bss</td>
+              <td>1111</td>
+            </tr>
+            <tr>
+              <td>Hakan Sarıçam</td>
+              <td>hs</td>
+              <td>2222</td>
+            </tr>
+            <tr>
+              <td>Umut Berkan Sarıçam</td>
+              <td>ubs</td>
+              <td>3333</td>
+            </tr>
+            <tr>
+              <td>İrem Pınar Sarıçam</td>
+              <td>ips</td>
+              <td>4444</td>
+            </tr>
+            <tr>
+              <td>Emir Kaan Sarıçam</td>
+              <td>eks</td>
+              <td>5555</td>
+            </tr>
+            <tr>
+              <td>Yüksel Şule Cantekin</td>
+              <td>yşc</td>
+              <td>6666</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <div class="container app">
         <div class="left-side">
           <h2 id="welcome-msg">Hoşgeldin Emir</h2>
           <h2 id="header-movements">Hesap Hareketleri</h2>
@@ -77,7 +123,7 @@
                 placeholder="0.00₺"
                 required
               />
-              <button type="submit">Yatır</button>
+              <button type="submit" id="deposit-btn">Yatır</button>
             </form>
           </div>
           <div class="transfer-section">
@@ -99,7 +145,7 @@
                 placeholder="0.00₺"
                 required
               />
-              <button type="submit">Gönder</button>
+              <button class="transfer-btn" type="submit">Gönder</button>
             </form>
           </div>
         </div>
@@ -114,8 +160,6 @@
             <li><a href="#">Yasal Uyarı</a></li>
             <li><a href="#">Güvenlik</a></li>
             <li><a href="#">Gizlilik</a></li>
-            <!-- <li><a href="#">Kişisel Verilerin Korunması</a></li>
-            <li><a href="#">Bilgi Toplumu Hizmetleri</a></li> -->
           </ul>
         </nav>
       </div>
