--- a/index.html
+++ b/index.html
@@ -57,33 +57,33 @@
           </thead>
           <tbody>
             <tr>
-              <td>Bakiye Sema Sarıçam</td>
-              <td>bss</td>
+              <td>Ayşe Yılmaz</td>
+              <td>ay</td>
               <td>1111</td>
             </tr>
             <tr>
-              <td>Hakan Sarıçam</td>
-              <td>hs</td>
+              <td>Hüseyin Yaman</td>
+              <td>hy</td>
               <td>2222</td>
             </tr>
             <tr>
-              <td>Umut Berkan Sarıçam</td>
-              <td>ubs</td>
+              <td>Berk Koçak</td>
+              <td>bk</td>
               <td>3333</td>
             </tr>
             <tr>
-              <td>İrem Pınar Sarıçam</td>
-              <td>ips</td>
+              <td>İrem Mutlu</td>
+              <td>im</td>
               <td>4444</td>
             </tr>
             <tr>
-              <td>Emir Kaan Sarıçam</td>
-              <td>eks</td>
+              <td>Eren Tekin</td>
+              <td>et</td>
               <td>5555</td>
             </tr>
             <tr>
-              <td>Yüksel Şule Cantekin</td>
-              <td>yşc</td>
+              <td>Barış Yüksel</td>
+              <td>by</td>
               <td>6666</td>
             </tr>
           </tbody>
@@ -92,7 +92,7 @@
 
       <div class="container app">
         <div class="left-side">
-          <h2 id="welcome-msg">Hoşgeldin Emir</h2>
+          <h2 id="welcome-msg"></h2>
           <h2 id="header-movements">Hesap Hareketleri</h2>
           <ul class="account-movements">
             <li>
