--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
-    <title>Marul Bank</title>
+    <title>EsenBank</title>
   </head>
   <body>
     <header>
@@ -19,7 +19,7 @@
       <div class="top-main-section">
         <div class="logo-section">
           <img src="logo.png" alt="" id="logo" />
-          <h1 id="company-name">Marul</h1>
+          <h1 id="company-name">Esen</h1>
           <h1>Bank</h1>
         </div>
 
@@ -36,8 +36,8 @@
               maxlength="4"
               class="login__input login_input--pin"
             />
+            <button id="login-btn">&rarr;</button>
           </form>
-          <button id="login-btn">Giriş</button>
         </div>
       </div>
     </header>
