--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <footer>
       <div class="footer-container">
-        <p>© 2023 Marul Bank A.Ş.</p>
+        <p>© 2023 EsenBank A.Ş.</p>
         <nav>
           <ul>
             <li><a href="#">Yasal Uyarı</a></li>
